add_subdirectory(Renderer)          # Cameras, Shaders, Buffers, Texture Manager, etc.
add_subdirectory(GLFWApplication)   # Base class (i.e. initiation for the application)
add_subdirectory(GeometricTools)    # Various geometric constructors
add_subdirectory(ErrorHandler)      # GL/GLFW/Custom error callbacks
add_subdirectory(Input)             # Keyboard
